# NeuroGraph

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
docs/: architecture.md
python/neurograph/: __init__.py  cli.py  engine.py  models.py  reporting.py  review.py  routing.py  state_machine.py
src/: errors.rs  graph.rs  lib.rs  parser.rs  rename.rs  schema.rs  validator.rs
tests/: test_python.py
